--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "5.1.1",
+    "@react-navigation/drawer": "5.1.1",
+    "@react-navigation/native": "5.1.1",
+    "@react-navigation/stack": "5.1.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
