--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "5.1.1",
-    "@react-navigation/drawer": "5.1.1",
-    "@react-navigation/native": "5.1.1",
-    "@react-navigation/stack": "5.1.1",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "3.3.0",
+    "react-native-reanimated": "^2.0.1",
+    "react-native-screens": "^2.18.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
