--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@types/react-native-uuid": "^1.4.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
@@ -21,6 +22,7 @@
     "react-native-paper": "3.3.0",
     "react-native-reanimated": "^2.0.1",
     "react-native-screens": "^2.18.1",
+    "react-native-uuid": "^1.4.9",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
