--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@types/react-native-uuid": "^1.4.0",
+    "@types/react-native-vector-icons": "^6.4.6",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
@@ -22,8 +23,10 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "3.3.0",
     "react-native-reanimated": "^2.0.1",
+    "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.18.1",
     "react-native-uuid": "^1.4.9",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
