--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.14.3",
     "@types/react-native-uuid": "^1.4.0",
     "@types/react-native-vector-icons": "^6.4.6",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
@@ -27,7 +28,9 @@
     "react-native-screens": "^2.18.1",
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
