--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
