--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@types/react-native-uuid": "^1.4.0",
     "@types/react-native-vector-icons": "^6.4.6",
+    "@ui-kitten/components": "^5.0.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
@@ -26,6 +28,8 @@
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.18.1",
+    "react-native-svg": "12.1.0",
+    "react-native-ui-kitten": "^4.4.1",
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
