--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-native-uuid": "^1.4.0",
     "@types/react-native-vector-icons": "^6.4.6",
     "@ui-kitten/components": "^5.0.0",
+    "@ui-kitten/eva-icons": "^5.0.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
