--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ui-kitten/eva-icons": "^5.0.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "~40.0.0",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "react": "16.13.1",
